# cadena-pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/cadena_pre_commit_hooks/: pin_requirements_txt.py
tests/: pin_requirements_txt_test.py
